--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,49 @@
-blessed==1.20.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
-editor==1.6.6
-idna==3.10
-inquirer==3.4.0
-pillow==11.0.0
-readchar==4.2.1
-requests==2.32.3
-runs==1.2.2
-setuptools==75.3.0
-six==1.16.0
-urllib3==2.2.3
-wcwidth==0.2.13
-xmod==1.8.1
+aiodns==3.2.0
+async_timeout==5.0.1
+brotli==1.1.0
+brotlicffi==1.1.0.0
+cffi==1.17.1
+chardet==5.2.0
+colorama==0.4.6
+ConfigParser==7.1.0
+cryptography==44.0.0
+Cython==3.0.11
+defusedxml==0.7.1
+dl==0.1.0
+docutils==0.21.2
+filelock==3.16.1
+Foundation==0.1.0a0.dev1
+gunicorn==23.0.0
+h2==4.1.0
+HTMLParser==0.0.2
+ini2toml==0.15
+ipython==8.31.0
+ipywidgets==8.1.5
+jinxed==1.3.0
+jnius==1.1.0
+js==1.0
+keyring==25.5.0
+mask==1.0.0
+mod==0.3.0
+numpy==2.2.1
+olefile==0.47
+path.py==12.5.0
+pkg1==0.0.3
+protobuf==5.29.3
+pyodide==0.0.2
+pyOpenSSL==25.0.0
+PyQt6==6.8.0
+PySide6==6.8.1.1
+PySide6.egg==info
+pytest==8.3.4
+redis==5.2.1
+simplejson==3.19.3
+Sphinx==8.1.3
+thread==2.0.5
+tomli_w==1.1.0
+trove_classifiers==2025.1.10.15
+urllib3_secure_extra==0.1.0
+uvloop==0.21.0
+xmlrpclib==1.0.1
+xx==3.3.2
+zstandard==0.23.0
