--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,11 @@
 name: Release Please
-
 on:
   push:
     branches:
       - main
-
 permissions:
   contents: write
   pull-requests: write
-
 jobs:
   release-please:
     runs-on: ubuntu-latest
@@ -29,7 +26,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12.0'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install cx_Freeze
+          
+      - name: Build executable
+        run: python setup.py build
+        
       - name: Upload release artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
-        run: gh release upload ${{ needs.release-please.outputs.tag_name }} src/cover_downloader.py
+        run:
+          gh release upload ${{ needs.release-please.outputs.tag_name }} build/exe.linux-x86_64-3.12/lutris-gridder
